--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans+Arabic:wght@100..800&display=swap');
 @import "tailwindcss";
 
 * {
-    font-family: "Poppins", sans-serif;
+  font-family: "Playpen Sans Arabic", cursive;
 }
 
 html {
@@ -19,4 +19,18 @@ html {
     .clip-path-custom-3 {
         clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 96%, 0 100%);
       }
+  }
+
+  @theme{
+    --color-shop-light-pink: #fcf0e4;
+   --color-shop_light_pink: #fcf0e4;
+   --color-shop_dark_green: #063c28;
+   --color-shop_btn_dark_green: #063D29; 
+  --color-shop_light_bg: #f6f6f6;
+         --color-shop_light_green: #3b9c3c; 
+          --color-shop_orange: #fb6c08;
+           --color-darkColor: #151515; 
+            --color-LightColor: #52525b; 
+             --color-lightOrange: #fca99b;
+             --color-shop_light_green: #3b9c3c;
   }
